--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DS Academy</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
     <header>
     </header>
     <main>
-      <form class="form">
-        <h2>Задать вопрос</h2>
+      <form class="form" action="https://digital-spectr.com/ac/academy.php" method="post">
+        <h2 class="form-title">
+          Задать вопрос
+        </h2>
         <div class="form__line">
           <input placeholder="Фамилия Имя Отчество *" type="text" class="form__input">
         </div>
@@ -23,7 +27,7 @@
           <input placeholder="Email" type="email" class="form__input">
         </div>
         <div class="form__line">
-          <input type="submit" class="form_button button">
+          <input type="submit" class="form__button button" value="Отправить запрос">
         </div>
       </form>
     </main>
